2004-11-01 23:09 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) When -DSURFACE_VALIDITY is defined,
	will return -1.0 if a jacobian <= 6.0e-16 is found.
	* src/Makefile.am define -DSURFACE_VALIDITY when compiling 
	libMesherX. This will only be used by the stand alone codes.
	the parallel librefine.a used by FUN3D is not affected.

2004-11-01 16:47 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridPlotMinDeterminateAtSurface) Call
	tecplot scalar to display the min Jacobian determinate for
	a node.
	* src/gridshape.c (gridMinCellJacDet2) gives the minimum nodal
	Jacobian determinate for a cell.

2004-10-29 15:38 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridParentGeometry) added a method for find the
	parent geometry: returns -edgeId, faceId, or 0 for no geometry
	parent.

2004-10-29 13:45 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am added gridshape to libMesherX.a for unit_main.c
	and refine_main.c.

2004-10-29 09:39 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotSurfaceGeom) renamed from
	gridWriteTecplotSurfaceZone, same with gridCloseTecplotGeomFile.
	* src/grid.c (gridWriteTecplotSurfaceScalar) added to dump
	nodal scalar info to a sperate tecplot file.
	* aBunchOfFiles implemented the tecplot renaming

2004-10-29 01:05 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridShapeJacobian1,gridShapeJacobian2) Added to
	try to use to determine if boundary tets are valid in a curved
	geometry sense.
	* src/gridmath.h (gridMatrixDeterminate) added a 3x3 matrix
	determine macro.

2004-10-18 13:50 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.3 Release. ** internal release ** while continuing
	edge-based operator research.
	
2004-10-18 13:18 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c number of edge-based cycles is a -e argument.

2004-10-15 23:55 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapNearNode) exposed limit. Will be set to
	default 0.7 if less than 0.
